[project]
name = "chaser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.55.1",
    "google-auth-oauthlib>=1.4.0",
    "itsdangerous>=2.2.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.39",
    "uuid>=1.30",
    "uvicorn>=0.50.1",
]
